feat: add album join qr endpoint
